tests/fail/turkce-olmayan-eylem.kip
(bu tam-sayıdan) (şu tam-sayıya) barlamak,
  ((bunla şunun büyüklüğü) doğruysa,
    durmaktır;
  yanlışsa,
    bunu foolayıp,
    (bunla 1'in toplamından) şuna barlamaktır).

1'den 16'ya barla.
